Add libheif dependency list CCBUGS: 441648

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -323,6 +323,7 @@ The full list of mandatory (X) and optional (opt) external dependencies required
 | liblcms              |   X      | >= 2.x      | http://www.littlecms.com                              | For Color Management support                           |                                                                                       |
 | libexpat             |   X      | >= 2.1.0    | http://expat.sourceforge.net                          | For DNG converter                                      |                                                                                       |
 | libexiv2             |   X      | >= 0.27.0   | http://www.exiv2.org                                  | Metadata low level management.                         |                                                                                       |
+| libheif              |   X      | >= 1.6.0    | https://github.com/strukturag/libheif                 | HEIF file format support.                              | Library must be compiled with libde265 (read) and optionaly with libx265 (write).     |
 | libxml2              |  opt     | >= 2.7.0    | http://xmlsoft.org                                    | For HtmlGallery tool                                   |                                                                                       |
 | libxslt              |  opt     | >= 1.1.0    | http://xmlsoft.org/XSLT                               | For HtmlGallery tool                                   |                                                                                       |
 | libqtav              |  opt     | >= 1.12.0   | http://www.qtav.org                                   | To play video and audio (ENABLE_MEDIAPLAYER=on)        |                                                                                       |
