Make libheif dependency optional CCBUGS: 441648

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -324,7 +324,8 @@ The full list of mandatory (X) and (optional) external dependencies required to 
 | liblcms              |      X      | >= 2.x        |               | https://github.com/mm2/Little-CMS                     | For Color Management support                           |                                                                                       |
 | libexpat             |      X      | >= 2.1.0      |               | https://libexpat.github.io/                           | For RAW to DNG converter                               |                                                                                       |
 | libexiv2             |      X      | >= 0.27.0     |               | https://github.com/Exiv2/exiv2                        | Metadata low level management.                         |                                                                                       |
-| libheif              |      X      | >= 1.6.0      |               | https://github.com/strukturag/libheif                 | HEIF file format support.                              | Library must be compiled with libde265 (read) and optionaly with libx265 (write).     |
+| libheif              |   optional  | >= 1.6.0      |               | https://github.com/strukturag/libheif                 | For HEIF file format support.                          | Library must be compiled with libde265 (read) and optionaly with libx265 (write).     |
+| libx265              |   optional  | >= 2.2        |               | https://x265.org/                                     | For HEIC encoding support                              |                                                                                       |
 | libxml2              |   optional  | >= 2.7.0      |               | https://gitlab.gnome.org/GNOME/libxml2/               | For HtmlGallery tool                                   |                                                                                       |
 | libxslt              |   optional  | >= 1.1.0      |               | https://gitlab.gnome.org/GNOME/libxslt                | For HtmlGallery tool                                   |                                                                                       |
 | libqtav              |   optional  | >= 1.12.0     | > 1.13.0      | https://github.com/wang-bin/QtAV                      | To play video and audio (ENABLE_MEDIAPLAYER=on)        | Qt6 support add in git master code later january 2022                                 |
@@ -342,7 +343,6 @@ The full list of mandatory (X) and (optional) external dependencies required to 
 | libgomp              |   optional  | >= 5.0        |               | https://gcc.gnu.org/onlinedocs/libgomp                | OpenMP support for RawEngine                           |                                                                                       |
 | libmagick++          |   optional  | >= 6.7.0      |               | https://www.imagemagick.org                           | ImageMagick codecs support for DImg image loader       | Version >= 7.0 recommended                                                            |
 | DrMingw              |   optional  | >= 0.8.2      |               | https://github.com/jrfonseca/drmingw                  | Mingw crash handler (run-time deps only for windows)   |                                                                                       |
-| libx265              |   optional  | >= 2.2        |               | https://x265.org/                                     | For HEIC encoding support                              |                                                                                       |
 
 \section getsourcecode Get Source Code
 
