add libheif dependency optional also in qt5-maintenance branch CCBUGS: 441648

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -323,7 +323,8 @@ The full list of mandatory (X) and optional (opt) external dependencies required
 | liblcms              |   X      | >= 2.x      | http://www.littlecms.com                              | For Color Management support                           |                                                                                       |
 | libexpat             |   X      | >= 2.1.0    | http://expat.sourceforge.net                          | For DNG converter                                      |                                                                                       |
 | libexiv2             |   X      | >= 0.27.0   | http://www.exiv2.org                                  | Metadata low level management.                         |                                                                                       |
-| libheif              |   X      | >= 1.6.0    | https://github.com/strukturag/libheif                 | HEIF file format support.                              | Library must be compiled with libde265 (read) and optionaly with libx265 (write).     |
+| libheif              |  opt     | >= 1.6.0    | https://github.com/strukturag/libheif                 | for HEIF file format support.                          | Library must be compiled with libde265 (read) and optionaly with libx265 (write).     |
+| libx265              |  opt     | >= 2.2      | http://x265.org/                                      | For HEIC encoding support.                             |                                                                                       |
 | libxml2              |  opt     | >= 2.7.0    | http://xmlsoft.org                                    | For HtmlGallery tool                                   |                                                                                       |
 | libxslt              |  opt     | >= 1.1.0    | http://xmlsoft.org/XSLT                               | For HtmlGallery tool                                   |                                                                                       |
 | libqtav              |  opt     | >= 1.12.0   | http://www.qtav.org                                   | To play video and audio (ENABLE_MEDIAPLAYER=on)        |                                                                                       |
@@ -341,7 +342,6 @@ The full list of mandatory (X) and optional (opt) external dependencies required
 | libgomp              |  opt     | >= 5.0      | https://gcc.gnu.org/onlinedocs/libgomp                | OpenMP support for RawEngine                           |                                                                                       |
 | libmagick++          |  opt     | >= 6.7.0    | https://www.imagemagick.org                           | ImageMagick codecs support for DImg image loader       | Version >= 7.0 recommended                                                            |
 | DrMingw              |  opt     | >= 0.8.2    | https://github.com/jrfonseca/drmingw                  | Mingw crash handler (run-time deps only for windows)   |                                                                                       |
-| libx265              |  opt     | >= 2.2      | http://x265.org/                                      | For HEIC encoding support                              |                                                                                       |
 
 \section getsourcecode Get Source Code
 
