--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,6 @@ BUGFIXES:
 005 ==> 450642 - Provide an option to open the light table after click on thumbnail.
 006 ==> 450643 - Expose menus optionally in the toolbar : burger main menu feature.
 007 ==> 451017 - Search by time of day.
-008 ==> 
+008 ==> 349268 - Be able to copy and paste the uploaded url to ImgUr web service.
 009 ==> 
 010 ==> 
