--- a/AUTHORS
+++ b/AUTHORS
@@ -94,6 +94,7 @@ Tom Albers <tomalbers at kde dot nl>                                      : Deve
 DIGIKAM SPLASHSCREENS CREDITS:
 ------------------------------
 
+7.7.0          : 
 7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.5.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.4.0          : Michel Pottier                 <Michel dot Pottier at free dot fr>
@@ -192,6 +193,7 @@ DIGIKAM SPLASHSCREENS CREDITS:
 SHOWFOTO SPLASHSCREENS CREDITS:
 -------------------------------
 
+7.7.0          : Judson Borges                  <<judson dot cefet at gmail dot com>>
 7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.5.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.4.0          : Michel Pottier                 <Michel dot Pottier at free dot fr>
@@ -283,6 +285,7 @@ SHOWFOTO SPLASHSCREENS CREDITS:
 ABOUT BACKGROUND IMAGE:
 -----------------------
 
+7.7.0          : 
 7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.5.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.4.0          : Michel Pottier                 <Michel dot Pottier at free dot fr>
