Add digiKAm 7.7.0 background photo from Tom Laville CCMAIL: laville.tom16@gmail.com

--- a/AUTHORS
+++ b/AUTHORS
@@ -94,7 +94,8 @@ Tom Albers <tomalbers at kde dot nl>                                      : Deve
 DIGIKAM SPLASHSCREENS CREDITS:
 ------------------------------
 
-7.7.0          : Nikolai Malykh                 <nmalykh at gmail dot com> 
+8.0.0          : Thomas Steffen                 <steffenthomas at t-online dot de>
+7.7.0          : Nikolai Malykh                 <nmalykh at gmail dot com>
 7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.5.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.4.0          : Michel Pottier                 <Michel dot Pottier at free dot fr>
@@ -193,6 +194,7 @@ DIGIKAM SPLASHSCREENS CREDITS:
 SHOWFOTO SPLASHSCREENS CREDITS:
 -------------------------------
 
+8.0.0          : Thomas Steffen                 <steffenthomas at t-online dot de>
 7.7.0          : Judson Borges                  <judson dot cefet at gmail dot com>
 7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.5.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
@@ -285,7 +287,8 @@ SHOWFOTO SPLASHSCREENS CREDITS:
 ABOUT BACKGROUND IMAGE:
 -----------------------
 
-7.7.0          : 
+8.0.0          : Thomas Steffen                 <steffenthomas at t-online dot de>
+7.7.0          : Tom Laville                    <laville dot tom16 at gmail dot com>
 7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.5.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
 7.4.0          : Michel Pottier                 <Michel dot Pottier at free dot fr>
