--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ digiKam 7.7.0 - Release date: 2022-xx-xx
 NEW FEATURES:
 
 General: remove internal libheif and libde265 from core in favor to system libraries.
+Bundles: Add JpegXL support (read/write) in all bundles (AppImage, MacOS, and Windows).
 
 *****************************************************************************************************
 BUGFIXES:
