--- a/NEWS
+++ b/NEWS
@@ -19,4 +19,5 @@ BUGFIXES:
 005 ==> 451221 - Cannot start digiKam.
 006 ==> 451289 - Database identifiers should be protected with tick marks.
 007 ==> 436533 - Add JPEG XL support in all bundles (AppImage, MacOS, Windows).
-009 ==> 
+009 ==> 109060 - Add AVIF file format support to all bundles (AppImage, MacOS, Windows).
+010 ==> 
