--- a/NEWS
+++ b/NEWS
@@ -24,4 +24,5 @@ BUGFIXES:
 011 ==> 451460 - Failed to update the database schema from version 10 to version 11.
 012 ==> 449406 - Photograph Properties incorrect after saving in image editor.
 013 ==> 451660 - digiKam Import Main View - <Ctrl-W>, <Ctr-Esc> and Menu entry "Close" do not close the Window.
-014 ==> 
+014 ==> 451697 - Why does digikam do anything to Thumbnails if tags are changed?
+015 ==> 
