--- a/NEWS
+++ b/NEWS
@@ -28,4 +28,5 @@ BUGFIXES:
 015 ==> 451628 - digiKam hangs on startup.
 016 ==> 451545 - Strange tagging after building a new database.
 017 ==> 451347 - Missing Rating info in XMP sidecar, for RAW files.
-018 ==> 
+018 ==> 450785 - Image version hiding not working.
+019 ==> 
