remove possible existing file if QFile::rename fails BUGS: 451786 FIXED-IN: 7.7.0

--- a/NEWS
+++ b/NEWS
@@ -31,4 +31,5 @@ BUGFIXES:
 018 ==> 450785 - Image version hiding not working.
 019 ==> 451723 - Reread metadata from image stalls when started from Tag Manager.
 020 ==> 451291 - Insuffiecient privileges "ALTER TABLE" crashes digikam.
-021 ==> 
+021 ==> 451786 - Zero sized images on failed move.
+022 ==> 
