--- a/NEWS
+++ b/NEWS
@@ -34,4 +34,5 @@ BUGFIXES:
 019 ==> 451723 - Reread metadata from image stalls when started from Tag Manager.
 020 ==> 451291 - Insuffiecient privileges "ALTER TABLE" crashes digikam.
 021 ==> 451786 - Zero sized images on failed move.
-022 ==> 
+022 ==> 451785 - Map view freezing.
+023 ==> 
