fix reading child elements BUGS: 451802 FIXED-IN: 8.0.0

--- a/NEWS
+++ b/NEWS
@@ -19,4 +19,5 @@ BUGFIXES:
 008 ==> 349268 - Be able to copy and paste the uploaded url to ImgUr web service.
 009 ==> 451525 - Maintenance tool dialog should not keep potentially destructive operations checked by default.
 010 ==> 251424 - Include gpx overlays found in albums.
-011 ==> 
+011 ==> 451802 - GPX files fails to load.
+012 ==> 
