--- a/NEWS
+++ b/NEWS
@@ -38,4 +38,5 @@ BUGFIXES:
 023 ==> 451637 - Crash while extra->maintenance.
 024 ==> 386522 - Video decoder backend in digiKam (windows 10).
 025 ==> 418266 - Animated .gif files flicker while looping.
-026 ==> 
+026 ==> 451933 - No access to folders with Flatpak.
+027 ==> 
