--- a/NEWS
+++ b/NEWS
@@ -41,4 +41,5 @@ BUGFIXES:
 026 ==> 451933 - No access to folders with Flatpak.
 027 ==> 451934 - Cannot move picture to trash.
 028 ==> 451943 - digiKam crashes on *.svg file that contains a font that's not installed on the system.
-029 ==> 
+029 ==> 451924 - digiKam-7.7.0-20220325T121458-Win64.tar.xz crash on start.
+030 ==> 
