add config option to get the album date source from newest item date from oldest item date from average date from folder date BUGS: 452321 FIXED-IN: 7.7.0

--- a/NEWS
+++ b/NEWS
@@ -46,4 +46,5 @@ BUGFIXES:
 030 ==> 452008 - Timestamp not updated when using File name timestamp.
 031 ==> 452103 - Custom keyboard shortcut definitions not persistent.
 032 ==> 452323 - digiKam crash after importing photos.
-033 ==> 
+033 ==> 452321 - digiKam Album date after migration from Picasa3.
+034 ==> 
