Use only ExifTool backend to write metadata to RAW files, as Exiv2 is fully unsafe with these kind of operations. Reading and Writing metadata to video files is now delegate to ExifTool Backend too. BUGS: 406540 BUGS: 416516 BUGS: 237504 BUGS: 384092 BUGS: 264210 BUGS: 326408 BUGS: 134486 BUGS: 309341 BUGS: 377622 BUGS: 170693 BUGS: 419801 BUGS: 338075 BUGS: 366348 FIXED-IN: 8.0.0

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ General  : Add JPEG-XL, WEBP, and AVIF export settings everywhere.
            Add convert to lossless JPEG-XL, WEBP, and AVIF while importing from camera.
            Add JPEG-XL; WEBP, and AVIF converters in Batch Queue Manager.
 Usability: Add hamburger menu to tool-bar if main menu is hidden.
+Metadata:  Write to RAW and Video files is now delegate to ExifTool Backend.
 
 *****************************************************************************************************
 BUGFIXES:
