--- a/NEWS
+++ b/NEWS
@@ -47,4 +47,5 @@ BUGFIXES:
 031 ==> 452103 - Custom keyboard shortcut definitions not persistent.
 032 ==> 452323 - digiKam crash after importing photos.
 033 ==> 452321 - digiKam Album date after migration from Picasa3.
-034 ==> 
+034 ==> 122738 - Exiv2 needed to compile.
+035 ==> 
