--- a/NEWS
+++ b/NEWS
@@ -59,4 +59,5 @@ BUGFIXES:
 042 ==> 441758 - Editing metadata on HEIC image and HEVC video files doesn't work (greyed out).
 043 ==> 440547 - The writing of metadata in HEIC files is not possible - Use ExifTool instead.
 044 ==> 434246 - XMP metadata fails to write to file with Exiv2 - Use ExifTool instead.
-045 ==> 
+045 ==> 225272 - digiKam destroy some Exif data with Exiv2 - Use ExifTool instead.
+046 ==> 
