--- a/NEWS
+++ b/NEWS
@@ -48,4 +48,5 @@ BUGFIXES:
 032 ==> 452323 - digiKam crash after importing photos.
 033 ==> 452321 - digiKam Album date after migration from Picasa3.
 034 ==> 122738 - Exiv2 needed to compile.
-035 ==> 
+035 ==> 451868 - Crash while creating quality.
+036 ==> 
