--- a/NEWS
+++ b/NEWS
@@ -64,4 +64,5 @@ BUGFIXES:
 047 ==> 342030 - digiKam crashes when checking an AVI video file using exiv2 - Use ExifTool instead.
 048 ==> 171989 - Can't set gps photo location on .nef images with Exiv2 - Use ExifTool instead.
 049 ==> 173828 - Geolocation do not except Canon EOS 1D Mark III CR2-files with Exiv2 - Use ExifTool instead.
-050 ==> 
+050 ==> 447371 - Date of videos seems incorrect.
+051 ==> 
